--- a/R2Boilerplate-master/ExamplePlugin/CookBook.csproj
+++ b/R2Boilerplate-master/ExamplePlugin/CookBook.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<LangVersion>preview</LangVersion>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<BaseOutputPath>C:\Users\logan\AppData\Roaming\r2modmanPlus-local\RiskOfRain2\profiles\Default\BepInEx\plugins\CookBook</BaseOutputPath>
 	</PropertyGroup>
 
 	<ItemGroup>
