final edits before release

--- a/CookBook/manifest.json
+++ b/CookBook/manifest.json
@@ -2,9 +2,9 @@
   "name": "CookBook",
   "version_number": "1.1.0",
   "website_url": "https://github.com/LBurnsUF/Chefs-CookBook",
-  "description": "",
+  "description": "A quality-of-life mod for Risk of Rain 2 that provides a structured, searchable, and expandable view of craftable items and their possible crafting paths.",
   "dependencies": [
-    "HookGenPatcher",
-    "BepInExPack"
+    "bbepis-BepInExPack-5.4.2120",
+    "RiskofThunder-HookGenPatcher-1.2.9"
   ]
 }
