--- a/CookBook/CookBook/CookBook.csproj
+++ b/CookBook/CookBook/CookBook.csproj
@@ -8,6 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Compile Include="CraftingExecutionHandler.cs" />
+		<Compile Include="CraftingObjectiveTracker.cs" />
 		<Compile Include="CraftPlanner.cs" />
 		<Compile Include="CraftUI.cs" />
 		<Compile Include="DialogueHooks.cs" />
@@ -31,21 +33,27 @@
 	<ItemGroup>
 		<Reference Include="Assembly-CSharp">
 			<HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\Risk of Rain 2_Data\Managed\Assembly-CSharp.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="RoR2">
 			<HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\Risk of Rain 2_Data\Managed\RoR2.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="com.unity.multiplayer-hlapi.Runtime">
 			<HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\Risk of Rain 2_Data\Managed\com.unity.multiplayer-hlapi.Runtime.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="HGCSharpUtils">
 			<HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\Risk of Rain 2_Data\Managed\HGCSharpUtils.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Unity.TextMeshPro">
 			<HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\Risk of Rain 2_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="UnityEngine.UI">
 			<HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\Risk of Rain 2_Data\Managed\UnityEngine.UI.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 	</ItemGroup>
 
