added basic networking support via chat hooks to avoid host dependency [beta]

--- a/CookBook/CookBook/CookBook.csproj
+++ b/CookBook/CookBook/CookBook.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Compile Include="ChatNetworkHandler.cs" />
 		<Compile Include="CraftingExecutionHandler.cs" />
 		<Compile Include="CraftingObjectiveTracker.cs" />
 		<Compile Include="CraftPlanner.cs" />
